[package]
name = "planner"
version = "0.1.0"
authors = ["Andrea Roy <akroy2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rusqlite = { version = "*", features = ["bundled"] }
structopt = "0.2.10"
termion = "*"

